overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* Base */
+html, body {
+  overflow-x:hidden 
+} 
 body {
   line-height: 1.7;
   color: gray;
@@ -1124,3 +1127,4 @@ h1, h2, h3, h4, h5,
         .comment-list li .comment-body .reply:hover {
           color: #000;
           background: #e3e3e3; }
+
